<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/textView"
    android:background="#C6E4F7"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        app:srcCompat="@drawable/zakatbg2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:background="@drawable/radius"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="32dip"
        android:layout_marginRight="16dip"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radius"
        android:maxLines="50"
        android:padding="10dp"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/course"
        android:textAlignment="center"
        android:background="@drawable/radius"
        android:textColor="@color/black"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView13"
        android:layout_centerHorizontal="true"
        android:background="@drawable/radius"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/link"
        android:padding="10dp"/>


</RelativeLayout>